# ActionScope

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: compromised_action_report.yml  new_iam_escalation_path.yml
.github/workflows/: action-e2e.yml  actionscope-self-scan.yml  ci.yml  docs.yml  release.yml
actionscope/: __init__.py  cli.py  compromised_db.py  models.py  state.py
actionscope/analyzers/: ai_agent_injection.py  artifact_poisoning.py  compromised_actions.py  exposure_paths.py  github_environments.py  github_token.py  iam_risk.py  oidc_trust.py  privesc_detector.py  reusable_workflows.py  risk_engine.py  script_injection.py
actionscope/data/: compromised_actions.json
actionscope/parsers/: policy_json.py  terraform.py  workflow.py
actionscope/reporters/: json_reporter.py  markdown.py  sarif.py  terminal.py
actionscope/resolvers/: __init__.py  pin_resolver.py
docs/: ai-agent-prompt-injection.md  ai-code-review.md  cli-reference.md  compromised-actions-database.md  compromised-actions.md  demo.md  demo.tape  exposure-paths.md  faq.md  getting-started.md  index.md  limitations.md  oidc-trust.md  output-formats.md  release-runbook.md  reusable-workflows.md  sarif.md  script-injection.md
docs/tutorials/: first-scan.md
examples/aws-blast-radius-demo/: README.md  (+1 more)
research/: FINDINGS.md  README.md  launch_posts.md  launch_v0_3_1.md  methodology.md  scan_public_repos.py
scripts/: build_compromised_actions_db_page.py  submit_to_awesome_lists.md  update_compromised_db.py
tests/: test_ai_agent_injection.py  test_artifact_poisoning.py  test_cli.py  test_compromised_actions.py  test_compromised_actions_schema.py  test_compromised_db.py  test_e2e_coverage.py  test_event_comment_injection.py  test_exposure_paths.py  test_github_environments.py  test_github_token.py  test_iam_risk.py  test_integration.py  test_oidc_trust.py  test_pin_resolver.py  test_policy_json_parser.py  test_privesc_detector.py  test_reporters.py  test_reusable_workflows.py  test_risk_engine.py  test_robustness.py  test_sarif.py  test_sarif_schema.py  test_script_injection.py  test_state.py  test_terminal_smoke.py  test_terraform_parser.py  test_workflow_parser.py
(+18 files in other folders)
